public/css/style.css
/* ... */
.slider_project_page .project_view_image {
    height: 271px;
    margin: 0 10px;
    cursor: pointer;
}

.slider_project_page .project_view_image img {
    height: 100%;
    width: 100%;
    object-fit: cover;
}

.slider_project_page::before,
.slider_project_page::after {
    height: 100%;
    width: 105px;
    top: 0;
    left: 0;
    background: linear-gradient(to right, #000, transparent);
    z-index: 30;
}

.slider_project_page::after {
    left: auto;
    right: 0;
    background: linear-gradient(to left, #000, transparent);
}

.pp_slider_track {
    position: relative;
}

.pp_slider_track .arr {
    position: absolute;
    left: 20px;
    top: 50%;
    transform: translateY(-50%);
    padding: 10px;
    z-index: 50;
}

.pp_slider_track .arr svg {
    fill: #fff;
    transition: 0.2s;
    width: 38px;
    height: 38px;
}

.pp_slider_track #pps_next {
    left: auto;
    right: 20px;
    transform: translateY(-50%) rotate(180deg);
}

.pp_slider_track .arr:hover svg {
    fill: #d90a2c;
}

/* project popup */
#project_popup_view {
    position: fixed;
    top: -101%;
    left: 0;
    width: 100%;
    height: 100vh;
    transition: 0.5s;
    background: rgba(15, 15, 15, 0.71);
    z-index: 500;
}

#project_popup_view .image {
    width: 70%;
    position: relative;
}

#project_popup_view .image img {
    width: 100%;
    height: 100%;
    object-position: center;
    object-fit: cover;
}

#project_popup_view #close_popup {
    width: 54px;
    height: 54px;
    background-color: #fff;
    border-radius: 50%;
    position: absolute;
    right: -25px;
    top: -25px;
}

#project_popup_view #close_popup img {
    width: 50%;
    height: 50%;
}

/* team view page */

.teamview_page {
    align-items: flex-start;
}
.teamview_page .img {
    width: 50%;
    height: auto;
    margin-right: 30px;
    margin-top: 20px;
}
.teamview_page .bio {
    max-width: 45%;
}
.teamview_page .bio .name {
    font-size: 60px;
    margin-bottom: 20px;
}
.teamview_page .bio .position {
    font-size: 30px;
    margin-bottom: 20px;
}
.teamview_page .bio .cntct {
    font-size: 30px;
    margin-bottom: 30px;
}
.teamview_page .bio .para {
    margin-bottom: 20px;
    font-size: 16px;
}

/*///////////////////////////// Responsive /////////////////////////////*/

/* general */
@media screen and (max-width: 1616px) {
    .wrapper {
        width: 95%;
    }
}

@media screen and (max-width: 1300px) {
    .margin_bottom {
        margin-bottom: 60px;
    }
}

@media screen and (max-width: 1200px) {
    .main_titles .title_bg {
        font-size: 126px;
    }

    .main_titles .title {
        font-size: 72px;
        margin-top: -110px;
        margin-left: 90px;
    }

    .contact_showcase iframe {
        margin-top: 90px;
    }

    .main_showcases {
        padding-top: 85px;
        height: 480px;
    }
}

@media screen and (max-width: 900px) {
    .main_showcases {
        padding-top: 70px;
        height: 410px;
    }

    .main_showcases .paragraph {
        font-size: 16px;
        max-width: 80%;
    }

    .main_showcases {
        height: 370px;
    }
}

@media screen and (max-width: 900px) {
    .main_showcases {
        height: 290px;
    }

    .main_showcases .wrapper {
        padding-top: 24px;
    }

    .main_showcases .paragraph {
        font-size: 14px;
        max-width: 80%;
    }
}

/* header */
@media screen and (max-width: 1200px) {
    .header .top .info {
        margin-right: 10px;
        font-size: 12px;
    }

    .header .logo {
        padding: 6px 23px;
    }

    .header .logo .main {
        font-size: 22px;
    }

    .header .navbar .nav {
        font-size: 16px;
    }

    .header .bottom {
        height: 53px;
    }

    .header .top {
        padding: 2px 10px;
    }
}

@media screen and (max-width: 900px) {
    .header .top {
        display: none;
    }

    .header_top_slider {
        display: block;
        padding: 5px 10px;
        font-size: 12px;
    }

    .header_top_slider .flex {
        display: flex;
        white-space: nowrap;
        justify-content: center;
        margin-right: 10px;
    }

    .header_top_slider img {
        margin-right: 5px;
    }
}

@media screen and (max-width: 800px) {
    .header .bottom {
        position: relative;
    }

    #menu_btn {
        display: inline-block;
        position: absolute;
        height: 2px;
        width: 30px;
        background-color: #013448;
        border-radius: 1px;
        right: 90px;
        top: calc(50% - 1px);
        transition: 0.2s;
    }

    #menu_btn::before,
    #menu_btn::after {
        width: 20px;
        height: 2px;
        background-color: #013448;
        right: 0;
        transition: 0.2s;
    }

    #menu_btn::before {
        top: -7px;
    }

    #menu_btn::after {
        bottom: -7px;
    }

    #menu_btn.clicked {
        width: 0;
    }

    #menu_btn.clicked::before {
        transform: rotate(-45deg);
        width: 30px;
        top: 0;
    }

    #menu_btn.clicked::after {
        transform: rotate(45deg);
        width: 30px;
        bottom: 0;
    }

    .header .navbar {
        position: absolute;
        display: flex;
        flex-direction: column;
        right: 0;
        top: 100%;
        width: auto;
        background-color: #fff;
        height: auto;
        width: 300px;
        transform: scaleY(0);
        transform-origin: top;
        transition: 0.3s;
        box-shadow: 0 0 10px #23506425;
    }

    .header .navbar.open {
        transform: scaleY(1);
    }

    .header .navbar .nav {
        border-left: none;
        width: 100%;
        padding: 5px;
    }

    .header .navbar .nav:hover {
        background-color: #23506425;
    }
}
/* ... */

